--- a/Instructions/StarterCode/Belly_Button_Biodiversity/requirements.txt
+++ b/Instructions/StarterCode/Belly_Button_Biodiversity/requirements.txt
@@ -1,13 +1,16 @@
-certifi==2018.4.16
-click==6.7
+certifi==2019.3.9
+Click==7.0
 Flask==1.0.2
-SQLAlchemy==1.3.0
-itsdangerous==0.24
-Jinja2==2.10.1
-MarkupSafe==1.0
-numpy==1.14.5
-pandas==0.23.3
-python-dateutil==2.7.3
-pytz==2018.5
-six==1.11.0
+SQLAlchemy==1.2.15
+Flask-SQLAlchemy==2.4.0
+psycopg2==2.8.2
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+numpy==1.15.4
+pandas==0.23.4
+python-dateutil==2.7.5
+pytz==2018.7
+six==1.12.0
 Werkzeug==0.14.1
+gunicorn==19.0.0
